--- a/examples/style.css
+++ b/examples/style.css
@@ -15,13 +15,10 @@
 }
 .schedule-rows td[data-selected],
 .schedule-rows td[data-selecting='selecting'] {
-  background-color: #C1FC9A;
+  background-color: #6a0bc1;
 }
 .schedule-rows td[data-selecting='deselecting'] {
   background-color: #FFDAD6;
-}
-.schedule-rows td[data-disabled] {
-  opacity: 0.55;
 }
 .schedule-rows td[data-disabled] {
   opacity: 0.55;
