--- a/examples/style.css
+++ b/examples/style.css
@@ -1,6 +1,10 @@
+.schedule-header th {
+  width: 60px;
+  text-align: center;
+}
 .schedule-rows td {
   width: 80px;
-  height: 30px;
+  height: 16px;
   margin: 3px;
   padding: 5px;
   background-color: #eee;
@@ -11,7 +15,9 @@
   background-color: transparent;
   text-align: right;
   position: relative;
-  top: -12px;
+}
+.schedule-rows td.time-label{
+  width: 60px;
 }
 .schedule-rows td[data-selected],
 .schedule-rows td[data-selecting='selecting'] {
